<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_329dp"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_278dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_230dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_43dp"
            android:paddingRight="@dimen/dimen_31dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:src="@mipmap/account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/hint_username"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_23dp"
                android:layout_marginBottom="@dimen/dimen_23dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:src="@mipmap/logo_email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:textColor="@color/black"
                    android:textColorHint="#bcbcbc"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_23dp"
                android:layout_marginBottom="@dimen/dimen_23dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:src="@mipmap/pwd" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/hint_pwd"
                    android:textColor="@color/black"
                    android:textColorHint="#bcbcbc"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_67dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_big_register_btn"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_24sp" />
    </LinearLayout>
</RelativeLayout>