<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bt_register_begin"
    tools:context=".activity.functionactivity">


    <LinearLayout
        android:id="@+id/function_tap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/layout_top1"
            android:textSize="@dimen/dimen_18sp"/>

        <TextView
            android:id="@+id/layout_top2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="13sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/function_tap"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/liuxing" />

                <TextView
                    android:id="@+id/f1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/shape_big_register_btn"
                    android:gravity="center"
                    android:text="@string/function1"
                    android:textSize="@dimen/dimen_18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginStart="100dp"
                        android:background="@drawable/all_button_layout"
                        android:onClick="function1"
                        android:text="功能1"
                        android:textColor="#d6336c" />

                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginStart="40dp"
                        android:background="@drawable/all_button_layout"
                        android:onClick="function2"
                        android:text="功能1"
                        android:textColor="#d6336c" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginStart="60dp"
                        android:background="@drawable/all_button_layout"
                        android:onClick="function3"
                        android:text="功能1"
                        android:textColor="#d6336c" />

                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/all_button_layout"
                        android:onClick="function4"
                        android:text="功能1"
                        android:textColor="#d6336c" />

                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/all_button_layout"
                        android:onClick="function5"
                        android:text="功能1"
                        android:textColor="#d6336c" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@mipmap/xingxing_2" />

            <TextView
                android:id="@+id/f2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/shape_big_register_btn"
                android:gravity="center"
                android:text="@string/function2"
                android:textSize="@dimen/dimen_18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="功能1"
                android:onClick="function6"
                android:textColor="#d6336c"
                android:background="@drawable/all_button_layout"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <!--          <ImageView-->
            <!--              android:layout_width="50dp"-->
            <!--              android:layout_height="50dp"-->
            <!--              android:src="@mipmap/tab_home_select"-->
            <!--              android:layout_gravity="center"/>-->

            <Button
                android:id="@+id/btn_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:onClick="onclick_home"
                android:background="@drawable/button_selector1" />

            <TextView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="首页"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <!--            <ImageView-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:src="@mipmap/tab_more_select"-->
            <!--                android:layout_gravity="center"/>-->
            <Button
                android:id="@+id/btn_function"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_selector2" />

            <TextView
                android:id="@+id/function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="功能"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <!--            <ImageView-->
            <!--                android:layout_width="46dp"-->
            <!--                android:layout_height="47dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:src="@mipmap/person_big" />-->
            <Button
                android:id="@+id/bgs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_selector3" />
            <TextView
                android:id="@+id/my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="我的"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>